# lidar2depth

./: CMakeLists.txt  README.md  package.xml
config/: camera.yml  r3live_ig3_config.yaml
include/: bag2depth.hpp  lidar2depth.hpp  lidar2mesh.hpp  lidar2submap.hpp  map2color.hpp  submap2lidar.hpp
launch/: bag2depth.launch  calibration.launch  lidar2depth.launch  lidar2mesh.launch  map2color.launch  map2thermal.launch  submap2lidar.launch
msg/: Mesh.msg  Submap.msg
rviz/: lidar2depth.rviz
scripts/: combine_submaps.py  image_publisher.py  poses_publisher.py  timestamps_publisher.py
src/: bag2depth.cpp  lidar2depth.cpp  lidar2mesh.cpp  lidar2submap.cpp  map2color.cpp  submap2lidar.cpp  test_projection.py
srv/: GetMap.srv  GetPoses.srv  GetStamps.srv
